# BayesianClassifier

./: .gitignore  CMakeLists.txt  README.md
include/: BayesianClassifier.h  EditText.h  EmailCsvParser.h
src/: BayesianClassifier.cpp  CMakeLists.txt  EditText.cpp  EmailCsvParser.cpp  main.cpp
